--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <p style="text-align:center">
     <br>
     <img src="images/midi.png" height="50px" width="200px" style="vertical-align:middle;">
-    <name>Machine Intelligence through Decision Making and Interaction</name>
+    <name>Machine Intelligence through Decision-making and Interaction</name>
   </p>
   <br>
 
@@ -34,7 +34,7 @@
       <td style="padding:0px">
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <p>
-            <img style="float:right;" alt="profile photo" src="images/lab.jpeg" height="300px" width="400px"/>
+            <img style="float:right;" alt="profile photo" src="images/lab.jpeg" height="267px" width="400px"/>
             I am an assistant professor in the Chandra Family Department of Electrical and Computer Engineering at UT Austin. My lab’s goal is to improve reinforcement learning algorithms to generalize and adapt for sequential decision-making problems in the real world. To this end, my research focuses on reinforcement learning but also touches upon the areas of continual learning, representation learning, Bayesian inference and uncertainty modeling, robot learning, and multi-agent learning.
 
           </p>
