--- a/pages/getting_involved.html
+++ b/pages/getting_involved.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Machine Intelligence through Decision Making and Interaction</title>
+  <title>Machine Intelligence through Decision-making and Interaction</title>
   
   <meta name="author" content="MIDI">
   <meta name="viewport" content="width=device-width, initial-scale=1">
