--- a/pages/people.html
+++ b/pages/people.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Machine Intelligence through Decision Making and Interaction</title>
+  <title>Machine Intelligence through Decision-making and Interaction</title>
   
   <meta name="author" content="MIDI">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,7 +25,6 @@
       <a href="publications.html">Publications</a>
       <a href="getting_involved.html">Getting Involved</a>
     </center>
-
   <hr style="width:100%;max-width:800px;text-align:center;">
 
   <table style="width:100%;max-width:1000px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -114,7 +113,7 @@
 
             <td style="padding:2.5%;width:20%;vertical-align:middle;">
               <p> 
-                <img src="../images/people/brett.jpeg" style="border-radius:150px; height:150px; width:150px; text-align:center; display:block; margin-left:auto; margin-right:auto;">
+                <img src="../images/people/brett.jpg" style="border-radius:150px; height:150px; width:150px; text-align:center; display:block; margin-left:auto; margin-right:auto;">
                 <br>
                 <center>
                 <a href="https://bebark.github.io/">Brett Barkley</a>
