--- a/pages/publications.html
+++ b/pages/publications.html
@@ -14,7 +14,7 @@
   <p style="text-align:center">
     <br>
     <img src="../images/midi.png" height="50px" width="200px" style="vertical-align:middle;">
-    <name>Machine Intelligence through Decision Making and Interaction</name>
+    <name>Machine Intelligence through Decision-making and Interaction</name>
   </p>
   <br>
   <div class="topnav">
@@ -30,6 +30,21 @@
 
   <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
     <tr style="padding:0px">
+      <td>
+        <b><paperyear>2023</paperyear></b>
+      </td>
+    </tr>
+    <tr>
+      <td style="padding:2.5%;width:20%;vertical-align:middle;">
+      </td>
+    </tr>
+    <tr>
+      <td style="width:20%;vertical-align:middle;">
+        <papertitle>Imitation from Arbitrary Experience: A Dual Unification of Reinforcement and Imitation Learning Methods</papertitle>
+        <br><em>Harshit Sikchi, Amy Zhang, Scott Neikum</em><br>
+        <a href="https://arxiv.org/abs/2302.08560" target="_blank"><paperlink>arxiv</paperlink></a> /
+        <a href="https://arxiv.org/abs/2302.08560" target="_blank"><paperlink>project page</paperlink></a>
+      </td>
     </tr>
   </table>
 </body>
