--- a/indexv1.html
+++ b/indexv1.html
@@ -14,13 +14,13 @@
 
 <body>
     <!--Header section-->
-    <div style="text-align:center; background-image: url('images/background-image-midilab.jpeg');
+    <div style="text-align:center; background-image: url('/Users/bonnieschipper/Max Lab Website Challenge/background-image-midilab.jpeg');
     background-size: cover; height:480px; padding-top:150px;">
-        <img src="images/midilogo.png" style="height: 300px">
+        <img src="/Users/bonnieschipper/Max Lab Website Challenge/midilogo.png" style="height: 300px">
         <h1 style="text-align:center; font: size 40px; color:white; margin:10px; font-family: Roboto, sans-serif">Machine Intelligence through Decision Making and Interaction</h1>
         <p style="text-align:center; font: size 30px; color: white; font-family: Roboto, sans-serif; "><em>The University of Texas at Austin</em></p>
       </div>
-      <!-- padding:20px -->
+      padding:20px
     <div class="topnav">
         <center>
         <topnav style="font-family: Roboto, sans-serif"
@@ -32,7 +32,7 @@
     </div>
 
 <!--About me section-->
-<img src="images/people/amy.png" style="border-radius: 50%; border: 10px solid #70a9ff; height:475px; margin: 50px; float: right;" alt="Amy Zhang">
+<img src="/Users/bonnieschipper/Max Lab Website Challenge/amyzhang.png" style="border-radius: 50%; border: 10px solid #70a9ff; height:475px; margin: 50px; float: right;" alt="Amy Zhang">
 <div style="height:600px; margin:100;">
     <h1 style="font-family: Roboto, sans-serif; margin:50px">Amy Zhang </h1>
     <p style="line-height: 2.0; font-family: Roboto, sans-serif; font-size:20px; margin: 50px;"> I am an assistant professor in the Chandra Family Department of Electrical and Computer Engineering at UT Austin. My lab’s goal is to improve reinforcement learning algorithms to generalize and adapt for sequential decision-making problems in the real world. To this end, my research focuses on reinforcement learning but also touches upon the areas of continual learning, representation learning, Bayesian inference and uncertainty modeling, robot learning, and multi-agent learning.
@@ -41,7 +41,7 @@
 
   <!--third section-->
     <div style="background-color: #70a9ff; height:500px; padding-top:10px;"> 
-        <img src="images/lab.jpeg" style=" height:400px; margin: 50px; float: left;" alt="Lab members"; font-family: Roboto, sans-serif>
+        <img src="/Users/bonnieschipper/Max Lab Website Challenge/lab.jpeg" style=" height:400px; margin: 50px; float: left;" alt="Lab members"; font-family: Roboto, sans-serif>
     <div style="height:200px; margin:100px;">
     <h1 style="font-family: Roboto, sans-serif;">About the Lab </h1>
     <p style="line-height: 2.0; font-family: Roboto, sans-serif; font-size:20px;"> Insert lab summary here.
