afixed section order

--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
         </center>
     </div>
 
+      <!--third section-->
+      <div style="background-color: #70a9ff; height:500px; padding-top:10px;"> 
+        <img src="images/lab.jpeg" style=" height:400px; margin: 50px; float: left;" alt="Lab members"; font-family: Roboto, sans-serif>
+    <div style="height:200px; margin:100px;">
+    <h1 style="font-family: Roboto, sans-serif;">About the Lab </h1>
+    <p style="line-height: 2.0; font-family: Roboto, sans-serif; font-size:20px;"> In the Machine Intelligence through Decision Making and Interaction (MIDI) lab, we are interested in developing machine learning algorithms that can learn from experience and adapt to new environments. We are particularly interested in reinforcement learning, which is a machine learning paradigm that allows an agent to learn from experience and make decisions in an uncertain environment. Our research focuses on developing reinforcement learning algorithms that can generalize and adapt to new environments. We also study how to improve the efficiency of reinforcement learning algorithms and how to make them more robust to noise and uncertainty. We are also interested in developing algorithms that can learn from multiple agents and make decisions in a multi-agent environment. </p>
+    </p>
+  </div>
+
 <!--About me section-->
 <img src="images/people/amy.png" style="border-radius: 50%; border: 10px solid #70a9ff; height:475px; margin: 50px; float: right;" alt="Amy Zhang">
 <div style="height:200px; margin:100;">
@@ -39,14 +48,7 @@
     </p>
 </div>
 
-  <!--third section-->
-    <div style="background-color: #70a9ff; height:500px; padding-top:10px;"> 
-        <img src="images/lab.jpeg" style=" height:400px; margin: 50px; float: left;" alt="Lab members"; font-family: Roboto, sans-serif>
-    <div style="height:200px; margin:100px;">
-    <h1 style="font-family: Roboto, sans-serif;">About the Lab </h1>
-    <p style="line-height: 2.0; font-family: Roboto, sans-serif; font-size:20px;"> Insert lab summary here.
-    </p>
-  </div>
+
 </body>
 
 
