--- a/index.html
+++ b/index.html
@@ -1,55 +1,64 @@
 <!DOCTYPE HTML>
-<html lang="en">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Machine Intelligence through Decision Making and Interaction</title>
-  
-  <meta name="author" content="MIDI">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <link rel="icon" type="image/png" href="images/midi.png">
+<html lang="en">
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Machine Intelligence through Decision Making and Interaction</title>
+    <meta name="author" content="MIDI">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="midistyle.css"/>
 </head>
 
 <body>
-    <!--Header section-->
-    <div style="text-align:center; background-image: url('images/background-image-midilab.jpeg');
-    background-size: cover; height:480px; padding-top:150px;">
-        <img src="images/midilogo.png" style="height: 300px">
-        <h1 style="text-align:center; font: size 40px; color:white; margin:1px; font-family: Roboto, sans-serif">Machine Intelligence through Decision Making and Interaction</h1>
-        <p style="text-align:center; font: size 30px; color: white; font-family: Roboto, sans-serif; "><em>The University of Texas at Austin</em></p>
-      </div>
-      <!-- padding:20px -->
-    <div class="topnav">
-        <center>
-        <topnav style="font-family: Roboto, sans-serif"
-        <a class="active" href="">Home</a>
-        <a href="pages/people.html">People</a>
-        <a href="pages/publications.html">Publications</a>
-        <a href="pages/getting_involved.html">Getting Involved</a>
-        </center>
-    </div>
 
-      <!--third section-->
-      <div style="background-color: #70a9ff; height:500px; padding-top:10px;"> 
-        <img src="images/lab.jpeg" style=" height:400px; margin: 50px; float: left;" alt="Lab members"; font-family: Roboto, sans-serif>
-    <div style="height:200px; margin:100px;">
-    <h1 style="font-family: Roboto, sans-serif;">About the Lab </h1>
-    <p style="line-height: 2.0; font-family: Roboto, sans-serif; font-size:20px;"> In the Machine Intelligence through Decision Making and Interaction (MIDI) lab, we are interested in developing machine learning algorithms that can learn from experience and adapt to new environments. We are particularly interested in reinforcement learning, which is a machine learning paradigm that allows an agent to learn from experience and make decisions in an uncertain environment. Our research focuses on developing reinforcement learning algorithms that can generalize and adapt to new environments. We also study how to improve the efficiency of reinforcement learning algorithms and how to make them more robust to noise and uncertainty. We are also interested in developing algorithms that can learn from multiple agents and make decisions in a multi-agent environment. </p>
-    </p>
-  </div>
+<!--Header section-->
+    <!--background photo--> <header class="w3-container" style="text-align:center; background-image: url('homepageimages/background-image-midilab.jpeg');
+        background-size: cover; width:100%; max-height: auto">
+        <img src="homepageimages/midilabanimated.png" style="max-width: 45vw; max-height: auto; padding: 2.5vw; padding-top:3.5vw">
+        <h1 style="font-weight: bold; color:white"; margin: 2.5%">Machine Intelligence through Decision Making and Interaction</h1>
+        <p style="text-align: center; color: white; margin: 2.5%"><em>The University of Texas at Austin</em></p>
+    </header>
 
-<!--About me section-->
-<img src="images/people/amy.png" style="border-radius: 50%; border: 10px solid #70a9ff; height:475px; margin: 50px; float: right;" alt="Amy Zhang">
-<div style="height:600px; margin:100;">
-    <h1 style="font-family: Roboto, sans-serif; margin:50px">Amy Zhang </h1>
-    <p style="line-height: 2.0; font-family: Roboto, sans-serif; font-size:20px; margin: 50px;"> I am an assistant professor in the Chandra Family Department of Electrical and Computer Engineering at UT Austin. My lab’s goal is to improve reinforcement learning algorithms to generalize and adapt for sequential decision-making problems in the real world. To this end, my research focuses on reinforcement learning but also touches upon the areas of continual learning, representation learning, Bayesian inference and uncertainty modeling, robot learning, and multi-agent learning.
-    </p>
+<!--navigation bar -->
+<div class="topnav">     
+    <topnav style="list-style: none; font-weight:bold; justify-content: space-around; display: flex ">
+     <center>
+     <a class="active" href="index.html">Home</a>
+     <a href="people.html">People</a>
+     <a href="publications.html">Publications</a>
+     <a href="getting_involved.html" >Getting Involved</a>
+     </center>
+  </topnav>
 </div>
 
+<!--About the lab section-->
+    <div class="w3-container" style=" width:100%; height:auto; padding-top: 2.5vw; padding-bottom: 5vw">
+        <!--photo of lab members--> <img src="homepageimages/lab.jpeg" style="box-sizing: unset; padding: 0%; margin: 5%; margin-top:2.5%; max-height:450px; max-width: 90%; float: left;" alt="Lab members">
+        <h2 style="margin: 5%; margin-top:2.5%; margin-bottom: 1.5%; font-weight:bold">About the Lab </h2>
+        <p style="margin-top: 1.5%"> Insert lab summary here.</p>
+        <center>
+        <div class="w3-container style=" width:100%; height:auto margin: 2.5%"
+            <!--UT Logo-->  <img src="homepageimages/UTexas.webp" style="width: 375px; max-width: 42.5vw; height: auto; padding-right: 2.5%; padding-left: 2.5%">
+            <!--UT ECE logo-->  <img src="homepageimages/utece.webp" style="width: 375px; max-width: 42.5vw; height: auto; padding-right: 2.5%; padding-left: 2.5%">    
+        </center> 
+        </div>
+    </div>
 
-</body>
 
+<!--About Amy section-->
+    <div class="w3-container" style="background-color: #70a9ff; width: 100%; height:auto; padding-top: 2.5vw; padding-bottom: 2.5vw;"> 
+         <!--Amy photo--> <img src="homepageimages/amyzhang.png" style="border-radius: 50%; border: 10px solid #ffffff; max-height:300px; max-width: 50%; margin: 7.5%; margin-top:2.5%; margin-bottom:2.5%; float: right;" alt="Amy Zhang">
+         <h2 style="margin: 5%; margin-bottom: 1.5%; font-weight:bold">About Amy Zhang </h2>
+         <p style="max-width: 100%; margin-top: 1.5%"> I am an assistant professor in the Chandra Family Department of Electrical and Computer Engineering at UT Austin. My lab’s goal is to improve reinforcement learning algorithms to generalize and adapt for sequential decision-making problems in the real world. To this end, my research focuses on reinforcement learning but also touches upon the areas of continual learning, representation learning, Bayesian inference and uncertainty modeling, robot learning, and multi-agent learning.</p>
+    </div>
+
+<!--Footer--> 
+    <div class="footer">
+         <footer>Copyright 2023 | MIDILab | The University of Texas at Austin</footer>
+    </div>
+
+</body> 
 
 </html>
