--- a/people.html
+++ b/people.html
@@ -69,8 +69,8 @@
   </div>
 
   <div class="w3-container" id="columnright"> 
-    <!--Caleb --> <img src="peoplepageimages/caleb.jpg" id="circle" style="border-radius: 50%; border: 10px solid #ffffff; max-height:130px; max-width: 50%; float: left;" alt="Caleb Chuk">
-    <a href="http://calcharles.github.io/" style="margin: 2.5%; max-width: 100%; font-weight:bold; ">Caleb Chuk</a>
+    <!--Caleb --> <img src="peoplepageimages/caleb.jpg" id="circle" style="border-radius: 50%; border: 10px solid #ffffff; max-height:130px; max-width: 50%; float: left;" alt="Caleb Chuck">
+    <a href="http://calcharles.github.io/" style="margin: 2.5%; max-width: 100%; font-weight:bold; ">Caleb Chuck</a>
   </div>
   
   <div class="w3-container" id="columnleft"> 
