--- a/getting_involved.html
+++ b/getting_involved.html
@@ -37,7 +37,7 @@
 <!--prospective phd message -->
 <div class="w3-container" style="margin: 7.5%; margin-bottom: 0%; padding:0%">
     <h2 style=" color: #70a9ff ">Prospective PhD Students</h2>
-    <p style="max-width: 100%; margin: 0%; margin-top: 1.5%">I currently advise students mainly through the Electrical and Computer Engineering department. However, I can also advise students in the Computer Science department. I am always looking for students interested in reinforcement learning. However, please note that admissions are made at a department level by appointed committees.</p>
+    <p style="max-width: 100%; margin: 0%; margin-top: 1.5%">I currently advise students mainly through the Electrical and Computer Engineering department, but can also advise students in the Computer Science department. I am always looking for students interested in reinforcement learning. However, please note that admissions are made at a department level by appointed committees.</p>
 </div>
 
 
