--- a/getting_involved.html
+++ b/getting_involved.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Machine Intelligence through Decision Making and Interaction</title>
+    <title>Machine Intelligence through Decision-making and Interaction</title>
     <meta name="author" content="MIDI">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -18,7 +18,7 @@
         background-size: cover; width:100%; max-height: auto">
         <img src="homepageimages/midilabanimated.png" style="max-width: 30vw; max-height: auto; padding-top:3.5vw">
         <h1 style="font-weight: bold; color:white"; margin: 1.5%">Getting Involved</h1>
-        <p style="text-align: center; color: white; margin: 1.5%"><em>Machine Intelligence through Decision Making and Interaction</em></p>
+        <p style="text-align: center; color: white; margin: 1.5%"><em>Machine Intelligence through Decision-making and Interaction</em></p>
     </header>
  
 <!--navigation bar -->
