--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Machine Intelligence through Decision Making and Interaction</title>
+    <title>Machine Intelligence through Decision-making and Interaction</title>
     <meta name="author" content="MIDI">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -17,7 +17,7 @@
     <!--background photo--> <header class="w3-container" style="text-align:center; background-image: url('homepageimages/background-image-midilab.jpeg');
         background-size: cover; width:100%; max-height: auto">
         <img src="homepageimages/midilabanimated.png" style="max-width: 45vw; max-height: auto; padding: 2.5vw; padding-top:3.5vw">
-        <h1 style="font-weight: bold; color:white"; margin: 2.5%">Machine Intelligence through Decision Making and Interaction</h1>
+        <h1 style="font-weight: bold; color:white"; margin: 2.5%">Machine Intelligence through Decision-making and Interaction</h1>
         <p style="text-align: center; color: white; margin: 2.5%"><em>The University of Texas at Austin</em></p>
     </header>
 
