--- a/people.html
+++ b/people.html
@@ -14,19 +14,20 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Machine Intelligence through Decision Making and Interaction</title>
-    <meta name="author" content="MIDI">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <meta name="author" content="MIDI"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="stylesheet" href="w3stylesheet.css"/>
     <link rel="stylesheet" href="midistyle.css"/>
+    <link rel="shortcut icon" type=“image/x-icon” href="favicon.ico"/>
 </head>
 
 <body>
 <!--Header section-->
-    <!--background photo--> <header class="w3-container" style="text-align:center; background-image: url('homepageimages/background-image-midilab.jpeg');
+    <!--background photo--> <header class="w3-container" style="text-align:center; background-image: url('homepageimages/CoverGradient.png');
         background-size: cover; width:100%; max-height: auto">
         <img src="homepageimages/midilabanimated.png" style="max-width: 30vw; max-height: auto; padding-top:3.5vw">
         <h1 style="font-weight: bold; color:white"; margin: 1.5%">People</h1>
-        <p style="text-align: center; color: white; margin: 1.5%"><em>Machine Intelligence through Decision Making and Interaction</em></p>
+        <p style="text-align: center; color: white; margin: 1.5%; padding-bottom: 4vw"><em>Machine Intelligence through Decision Making and Interaction</em></p>
     </header>
  
   <!--navigation bar -->
@@ -34,15 +35,17 @@
     <topnav style="list-style: none; font-weight:bold; justify-content: space-around; display: flex ">
      <center>
      <a href="index.html">Home</a>
-     <a  class="active" href="people.html">People</a>
+     <a  class="active" href="midipages/people.html">People</a>
      <a href="publications.html">Publications</a>
      <a href="getting_involved.html" >Getting Involved</a>
      </center>
   </topnav>
 </div>
 
+<div class="gray">
+
  <!--Faculty section--> 
-<div class="w3-container" style="background-color: whitesmoke; width: 100%; height:auto; padding-top:2.5%; padding-bottom:2.5%"> 
+<div class="w3-container" style="background-color: whitesmoke; width: 100%; height:auto%"> 
   <h2 style="max-width: 100%; color: #70a9ff; font-weight:bold; margin: 5%; margin-top: 2.5%; margin-bottom: 2.5%">Faculty </h2>
 
   <div class="w3-container" id="columnleft"> 
@@ -90,10 +93,10 @@
 
  <!--Masters section--> 
  <div class="w3-container" id="columnleft"> 
-  <h2 style="max-width: 100%; color: #70a9ff; font-weight:bold; margin: 5%%">Masters Students </h2>
+  <h2 style="max-width: 100%; color: #70a9ff; font-weight:bold; margin: 5%">Masters Students </h2>
 
   <div class="w3-container" id="columnleft" style="width: 100%; height:auto; margin:2.5% "> 
-    <!--Jameet --> <img src="peoplepageimages/jasmeet.jpg" style="border-radius: 50%; border: 10px solid #70a9ff; max-height:150px; max-width: 50%; float: left;" alt="Jasmeet Kaur">
+    <!--Jasmeet --> <img src="peoplepageimages/jasmeet.jpg" style="border-radius: 50%; border: 10px solid #70a9ff; max-height:130px; max-width: 50%; float: left;" alt="Jasmeet Kaur">
     <a style="margin: 2.5%; max-width: 100%; font-weight:bold; ">Jasmeet Kaur</a> <!--insert github link in this line--> 
   </div>
 
@@ -101,11 +104,13 @@
 <!--paste new MASTERS people above this line using template-->
 </div>  
     
+</div>
 
 <!--Footer--> 
-<div class="footer">
+<div class="footer" style="padding:1vw">
   <footer>Copyright 2023 | MIDILab | The University of Texas at Austin</footer>
 </div>
+
 
 </body>
 
