--- a/publications.html
+++ b/publications.html
@@ -18,17 +18,18 @@
     <title>Machine Intelligence through Decision Making and Interaction</title>
     <meta name="author" content="MIDI">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="w3stylesheet.css">
     <link rel="stylesheet" href="midistyle.css"/>
+    <link rel="shortcut icon" type=“image/x-icon” href="favicon.ico"/>
 </head>
 
 <body>
 <!--Header section-->
-    <!--background photo--> <header class="w3-container" style="text-align:center; background-image: url('homepageimages/background-image-midilab.jpeg');
-        background-size: cover; width:100%; max-height: auto">
-        <img src="homepageimages/midilabanimated.png" style="max-width: 30vw; max-height: auto; padding-top:3.5vw">
+    <!--background photo--> <header class="w3-container" style="text-align:center; background-image: url('homepageimages/CoverGradient.png');
+        background-size: cover; width:100%; max-height: 20vw">
+        <img src="homepageimages/midilabanimated.png" style="max-width: 20vw; max-height: auto; padding-top:3.5vw">
         <h1 style="font-weight: bold; color:white"; margin: 1.5%">Publications</h1>
-        <p style="text-align: center; color: white; margin: 1.5%"><em>Machine Intelligence through Decision Making and Interaction</em></p>
+        <p style="text-align: center; color: white; margin: 1.5%; padding-bottom: 4vw"><em>Machine Intelligence through Decision Making and Interaction</em></p>
     </header>
  
 <!--navigation bar -->
