--- a/getting_involved.html
+++ b/getting_involved.html
@@ -7,18 +7,19 @@
     <title>Machine Intelligence through Decision Making and Interaction</title>
     <meta name="author" content="MIDI">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="w3stylesheet.css">
     <link rel="stylesheet" href="midistyle.css"/>
     <link href="contact-form.css" rel="stylesheet">
+    <link rel="shortcut icon" type=“image/x-icon” href="favicon.ico"/>
 </head>
 
 <body>
 <!--Header section-->
-    <!--background photo--> <header class="w3-container" style="text-align:center; background-image: url('homepageimages/background-image-midilab.jpeg');
+    <!--background photo--> <header class="w3-container" style="text-align:center; background-image: url('homepageimages/CoverGradient.png');
         background-size: cover; width:100%; max-height: auto">
         <img src="homepageimages/midilabanimated.png" style="max-width: 30vw; max-height: auto; padding-top:3.5vw">
         <h1 style="font-weight: bold; color:white"; margin: 1.5%">Getting Involved</h1>
-        <p style="text-align: center; color: white; margin: 1.5%"><em>Machine Intelligence through Decision Making and Interaction</em></p>
+        <p style="text-align: center; color: white; margin: 1.5%; padding-bottom: 4vw"><em>Machine Intelligence through Decision Making and Interaction</em></p>
     </header>
  
 <!--navigation bar -->
@@ -42,6 +43,8 @@
 
 
 <!--contact us form -->
+<!--
+    
 <div class="fcf-body">
 
     <div class="w3-container" style="margin: 7.5%; padding:0%" id="fcf-form">
