--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <title>Machine Intelligence through Decision Making and Interaction</title>
     <meta name="author" content="MIDI">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="w3stylesheet.css">
     <link rel="stylesheet" href="midistyle.css"/>
 </head>
 
 <body>
 
 <!--Header section-->
-    <!--background photo--> <header class="w3-container" style="text-align:center; background-image: url('homepageimages/background-image-midilab.jpeg');
+    <!--background photo--> <header class="w3-container" style="text-align:center; background-image: url('homepageimages/CoverGradient.png');
         background-size: cover; width:100%; max-height: auto">
-        <img src="homepageimages/midilabanimated.png" style="max-width: 45vw; max-height: auto; padding: 2.5vw; padding-top:3.5vw">
+        <img src="homepageimages/midilabanimated.png" style="max-width: 35vw; max-height: auto; padding: 2.5vw; padding-top:5vw">
         <h1 style="font-weight: bold; color:white"; margin: 2.5%">Machine Intelligence through Decision Making and Interaction</h1>
-        <p style="text-align: center; color: white; margin: 2.5%"><em>The University of Texas at Austin</em></p>
+        <img src="TexasLogoWhite.png" style="max-width: 15vw; max-height: auto; padding: 2.5vw; padding-bottom:5vw">
     </header>
 
 <!--navigation bar -->
@@ -29,6 +29,7 @@
      <a href="people.html">People</a>
      <a href="publications.html">Publications</a>
      <a href="getting_involved.html" >Getting Involved</a>
+     <link rel="shortcut icon" type=“image/x-icon” href="favicon.ico"/>
      </center>
   </topnav>
 </div>
@@ -36,8 +37,8 @@
 <!--About the lab section-->
     <div class="w3-container" style=" width:100%; height:auto; padding-top: 2.5vw; padding-bottom: 5vw">
         <!--photo of lab members--> <img src="homepageimages/lab.jpeg" style="box-sizing: unset; padding: 0%; margin: 5%; margin-top:2.5%; max-height:450px; max-width: 90%; float: left;" alt="Lab members">
-        <h2 style="margin: 5%; margin-top:2.5%; margin-bottom: 1.5%; font-weight:bold">About the Lab </h2>
-        <p style="margin-top: 1.5%"> Insert lab summary here.</p>
+        <h2 style="margin: 5%; margin-top:2.5%; margin-bottom: 2.5%; font-weight:bold">About the Lab </h2>
+        <p style="margin-top: 2.5%"> Insert lab summary here.</p>
         <center>
         <div class="w3-container style=" width:100%; height:auto margin: 2.5%"
             <!--UT Logo-->  <img src="homepageimages/UTexas.webp" style="width: 375px; max-width: 42.5vw; height: auto; padding-right: 2.5%; padding-left: 2.5%">
@@ -48,10 +49,10 @@
 
 
 <!--About Amy section-->
-    <div class="w3-container" style="background-color: #70a9ff; width: 100%; height:auto; padding-top: 2.5vw; padding-bottom: 2.5vw;"> 
-         <!--Amy photo--> <img src="homepageimages/amyzhang.png" style="border-radius: 50%; border: 10px solid #ffffff; max-height:300px; max-width: 50%; margin: 7.5%; margin-top:2.5%; margin-bottom:2.5%; float: right;" alt="Amy Zhang">
-         <h2 style="margin: 5%; margin-bottom: 1.5%; font-weight:bold">About Amy Zhang </h2>
-         <p style="max-width: 100%; margin-top: 1.5%"> I am an assistant professor in the Chandra Family Department of Electrical and Computer Engineering at UT Austin. My lab’s goal is to improve reinforcement learning algorithms to generalize and adapt for sequential decision-making problems in the real world. To this end, my research focuses on reinforcement learning but also touches upon the areas of continual learning, representation learning, Bayesian inference and uncertainty modeling, robot learning, and multi-agent learning.</p>
+    <div class="w3-container" style="background-color: #70a9ff; width: 100%; height:auto"> 
+         <!--Amy photo--> <img src="homepageimages/amyzhang.png" style="border-radius: 50%; border: 1vw solid #ffffff; max-height:20vmax; max-width: 50%; margin: 7.5%; float: right;" alt="Amy Zhang">
+         <h2 style="margin: 5%; margin-bottom: 2.5%; font-weight:bold">About Amy Zhang </h2>
+         <p style="max-width: 100%; margin-top: 2.5%"> I am an assistant professor in the Chandra Family Department of Electrical and Computer Engineering at UT Austin. My lab's goal is to improve reinforcement learning algorithms to generalize and adapt for sequential decision-making problems in the real world. To this end, my research focuses on reinforcement learning but also touches upon the areas of continual learning, representation learning, Bayesian inference and uncertainty modeling, robot learning, and multi-agent learning.</p>
     </div>
 
 <!--Footer--> 
