--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--background photo--> <header class="w3-container" style="text-align:center; background-image: url('homepageimages/CoverGradient.png');
         background-size: cover; width:100%; max-height: auto">
         <img src="homepageimages/midilabanimated.png" style="max-width: 35vw; max-height: auto; padding: 2.5vw; padding-top:5vw">
-        <h1 style="font-weight: bold; color:white"; margin: 2.5%">Machine Intelligence through Decision Making and Interaction</h1>
+        <h1 style="font-weight: bold; color:white"; margin: 2.5%">Machine Intelligence through Decision-making and Interaction</h1>
         <img src="TexasLogoWhite.png" style="max-width: 15vw; max-height: auto; padding: 2.5vw; padding-bottom:5vw">
     </header>
 
