--- a/publications.html
+++ b/publications.html
@@ -29,7 +29,7 @@
         background-size: cover; width:100%; max-height: 20vw">
         <img src="homepageimages/midilabanimated.png" style="max-width: 20vw; max-height: auto; padding-top:3.5vw">
         <h1 style="font-weight: bold; color:white"; margin: 1.5%">Publications</h1>
-        <p style="text-align: center; color: white; margin: 1.5%; padding-bottom: 4vw"><em>Machine Intelligence through Decision Making and Interaction</em></p>
+        <p style="text-align: center; color: white; margin: 1.5%; padding-bottom: 4vw"><em>Machine Intelligence through Decision-making and Interaction</em></p>
     </header>
  
 <!--navigation bar -->
