--- a/people.html
+++ b/people.html
@@ -35,7 +35,7 @@
     <topnav style="list-style: none; font-weight:bold; justify-content: space-around; display: flex ">
      <center>
      <a href="index.html">Home</a>
-     <a  class="active" href="midipages/people.html">People</a>
+     <a  class="active" href="people.html">People</a>
      <a href="publications.html">Publications</a>
      <a href="getting_involved.html" >Getting Involved</a>
      </center>
