--- a/getting_involved.html
+++ b/getting_involved.html
@@ -42,9 +42,9 @@
 </div>
 
 <!--prospective visiting student message -->
-<div class="w3-container" style="margin: 7.5%; margin-bottom: 0%; padding:0%">
+<div class="w3-container" style="margin: 7.5%; margin-bottom: 0%; height:auto; padding:0%">
     <h2 style=" color: #70a9ff ">Prospective Visiting Researchers</h2>
-    <p style="max-width: 100%; margin: 0%; margin-top: 1.5%">If you are an undergraduate or Masters student at UT Austin or an external researcher interested in visiting the lab, please fill out <a href="https://forms.gle/jr8k7id2K6qkQP6q9">this form</a>  </p>
+    <p style="max-width: 100%; margin: 0%; margin-top: 1.5%">If you are an undergraduate or Masters student at UT Austin or an external researcher interested in visiting the lab, please fill out <a href="https://forms.gle/jr8k7id2K6qkQP6q9">this form</a>.  </p>
 </div>
 
 
