daniel prof pic

--- a/people.html
+++ b/people.html
@@ -81,6 +81,11 @@
     <a href="https://agarwalsiddhant10.github.io/" style="margin: 2.5%; max-width: 100%; font-weight:bold; ">Siddhant Agarwal</a>
   </div>
 
+  <div class="w3-container" id="columnleft"> 
+    <!--Harshit --> <img src="peoplepageimages/daniel.jpg" id="circle"  style="border-radius: 50%; border: 10px solid #ffffff; max-height:130px; max-width: 50%; float: left;" alt="Daniel Adebi">
+    <a href="https://danieladebi.github.io/" style="margin: 2.5%; max-width: 100%; font-weight:bold; ">Daniel Adebi</a>
+  </div>
+
 
 <!--paste new PHD people above this line using template-->
 </div>
