--- a/people.html
+++ b/people.html
@@ -82,7 +82,7 @@
   </div>
 
   <div class="w3-container" id="columnleft"> 
-    <!--Harshit --> <img src="peoplepageimages/daniel.jpg" id="circle"  style="border-radius: 50%; border: 10px solid #ffffff; max-height:130px; max-width: 50%; float: left;" alt="Daniel Adebi">
+    <!--Daniel --> <img src="peoplepageimages/daniel.jpg" id="circle"  style="border-radius: 50%; border: 10px solid #ffffff; max-height:130px; max-width: 50%; float: left;" alt="Daniel Adebi">
     <a href="https://danieladebi.github.io/" style="margin: 2.5%; max-width: 100%; font-weight:bold; ">Daniel Adebi</a>
   </div>
 
