--- a/people.html
+++ b/people.html
@@ -91,6 +91,10 @@
     <a href="https://carl-qi.github.io/" style="margin: 2.5%; max-width: 100%; font-weight:bold; ">Carl Qi</a>
   </div>
 
+  <div class="w3-container" id="columnleft">
+    <!--Daniel --> <img src="peoplepageimages/ryan.jpg" id="circle"  style="border-radius: 50%; border: 10px solid #ffffff; max-height:130px; max-width: 50%; float: left;" alt="Haoran Xu">
+    <a href="https://ryanxhr.github.io//" style="margin: 2.5%; max-width: 100%; font-weight:bold; ">Haoran Xu</a>
+  </div>
 
 <!--paste new PHD people above this line using template-->
 </div>
