--- a/publications.html
+++ b/publications.html
@@ -52,6 +52,13 @@
     <h2 style="max-width: 100%; color: #70a9ff; font-weight:bold; margin: 5%; margin-bottom: 2.5%">2023</h2>
 
     <div class="w3-container" style="padding:0%; margin: 5%; margin-top: 2.5%"> 
+        <papertitle><b>f-Policy Gradients: A General Framework for Goal Conditioned RL using f-Divergences</b></papertitle>
+        <br><em>Siddhant Agarwal, Ishan Durugkar, Peter Stone, Amy Zhang</em><br>
+        <a href="https://arxiv.org/abs/2310.06794v1" target="_blank"><paperlink>arxiv</paperlink></a> /
+        <a href="https://agarwalsiddhant10.github.io/projects/fpg.html" target="_blank"><paperlink>project page</paperlink></a>
+    </div>
+
+    <div class="w3-container" style="padding:0%; margin: 5%; margin-top: 2.5%"> 
         <papertitle><b>Imitation from Arbitrary Experience: A Dual Unification of Reinforcement and Imitation Learning Methods</b></papertitle>
         <br><em>Harshit Sikchi, Amy Zhang, Scott Neikum</em><br>
         <a href="https://arxiv.org/abs/2302.08560" target="_blank"><paperlink>arxiv</paperlink></a> /
