--- a/publications.html
+++ b/publications.html
@@ -49,18 +49,99 @@
 <!--2023 publications -->
 
 <div class="w3-container"> 
+    <h2 style="max-width: 100%; color: #70a9ff; font-weight:bold; margin: 5%; margin-bottom: 2.5%">2024</h2>
+
+    <div class="w3-container" style="padding:0%; margin: 5%; margin-top: 2.5%"> 
+        <papertitle><b><u>AMAGO-2: Breaking the Multi-Task Barrier in Meta-Reinforcement Learning with Transformers</u></b></papertitle>
+        <br><em>Jake Grigsby, Justin Sasek, <b>Samyak Parajuli</b>, <b>Daniel Adebi</b>, <b>Amy Zhang</b>, Yuke Zhu</em><br>
+        <a href="https://arxiv.org/pdf/2406.17688" target="_blank"><paperlink>arxiv</paperlink></a> /
+        <a href="https://github.com/philippe-eecs/small-vision" target="_blank"><paperlink>project page</paperlink></a>
+    </div>
+
+    <div class="w3-container" style="padding:0%; margin: 5%; margin-top: 2.5%"> 
+        <papertitle><b><u>EC-Diffuser: Multi-Object Manipulation via Entity-Centric Behavior Generation</u></b></papertitle>
+        <br><em><b>Carl Qi</b>, Dan Haramati, Tal Daniel, Aviv Tamar, <b>Amy Zhang</b></em><br>
+        <a href="https://arxiv.org/pdf/2406.17688" target="_blank"><paperlink>arxiv</paperlink></a> /
+        <a href="https://github.com/philippe-eecs/small-vision" target="_blank"><paperlink>project page</paperlink></a>
+    </div>
+
+    <div class="w3-container" style="padding:0%; margin: 5%; margin-top: 2.5%"> 
+        <papertitle><b><u>Unified Auto-Encoding with Masked Diffusion</u></b></papertitle>
+        <br><em><b>Philippe Hansen-Estruch</b>, Sriram Vishwanath, <b>Amy Zhang</b>, Manan Tomar</em><br>
+        <a href="https://arxiv.org/pdf/2406.17688" target="_blank"><paperlink>arxiv</paperlink></a> /
+        <a href="https://github.com/philippe-eecs/small-vision" target="_blank"><paperlink>project page</paperlink></a>
+    </div>
+
+    <div class="w3-container" style="padding:0%; margin: 5%; margin-top: 2.5%"> 
+        <papertitle><b><u>SkiLD: Unsupervised Skill Discovery Guided by Factor Interactions</u></b></papertitle>
+        <br><em>Zizhao Wang, Jiaheng Hu, <b>Caleb Chuck</b>, Stephen Chen, Roberto Martín-Martín, <b>Amy Zhang</b>, Scott Niekum, Peter Stone</em><br>
+        <a href="https://arxiv.org/pdf/2410.18416" target="_blank"><paperlink>arxiv</paperlink></a> /
+        <a href="https://wangzizhao.github.io/SkiLD/" target="_blank"><paperlink>project page</paperlink></a>
+    </div>
+
+    <div class="w3-container" style="padding:0%; margin: 5%; margin-top: 2.5%"> 
+        <papertitle><b><u>Automated Discovery of Functional Actual Causes in Complex Environments</u></b></papertitle>
+        <br><em><b>Caleb Chuck</b>, Sankaran Vaidyanathan, Stephen Giguere, <b>Amy Zhang</b>, David Jensen, Scott Niekum</em><br>
+        <a href="https://arxiv.org/pdf/2404.10883" target="_blank"><paperlink>arxiv</paperlink></a> /
+        <a href="https://calcharles.github.io/" target="_blank"><paperlink>project page</paperlink></a>
+    </div>
+
+    <div class="w3-container" style="padding:0%; margin: 5%; margin-top: 2.5%"> 
+        <papertitle><b><u>Automated Discovery of Functional Actual Causes in Complex Environments</u></b></papertitle>
+        <br><em><b>Caleb Chuck</b>, Sankaran Vaidyanathan, Stephen Giguere, <b>Amy Zhang</b>, David Jensen, Scott Niekum</em><br>
+        <a href="https://arxiv.org/pdf/2404.10883" target="_blank"><paperlink>arxiv</paperlink></a> /
+        <a href="https://calcharles.github.io/" target="_blank"><paperlink>project page</paperlink></a>
+    </div>
+
+    <div class="w3-container" style="padding:0%; margin: 5%; margin-top: 2.5%"> 
+        <papertitle><b><u>Learning Action-based Representations Using Invariance</u></b></papertitle>
+        <br><em><b>Max Rudolph</b>, <b>Caleb Chuck</b>, Kevin Black, Misha Lvovsky, Scott Niekum, <b>Amy Zhang</b></em><br>
+        <a href="https://arxiv.org/pdf/2403.16369" target="_blank"><paperlink>arxiv</paperlink></a> /
+        <a href="https://maxrudolph1.github.io/action-bisimulation-site/" target="_blank"><paperlink>project page</paperlink></a>
+    </div>
+
+    <!-- 2023 -->
+
     <h2 style="max-width: 100%; color: #70a9ff; font-weight:bold; margin: 5%; margin-bottom: 2.5%">2023</h2>
 
     <div class="w3-container" style="padding:0%; margin: 5%; margin-top: 2.5%"> 
-        <papertitle><b>f-Policy Gradients: A General Framework for Goal Conditioned RL using f-Divergences</b></papertitle>
-        <br><em>Siddhant Agarwal, Ishan Durugkar, Peter Stone, Amy Zhang</em><br>
+        <papertitle><b><u>A Dual Approach to Imitation Learning from Observations with Offline Datasets</u></b></papertitle>
+        <br><em><b>Harshit Sikchi</b>, <b>Caleb Chuck</b>, <b>Amy Zhang</b>, Scott Niekum</em><br>
+        <a href="https://arxiv.org/pdf/2406.08805" target="_blank"><paperlink>arxiv</paperlink></a> /
+        <a href="https://hari-sikchi.github.io/dilo/" target="_blank"><paperlink>project page</paperlink></a>
+    </div>
+
+    <div class="w3-container" style="padding:0%; margin: 5%; margin-top: 2.5%"> 
+        <papertitle><b><u>Robot Air Hockey: A Manipulation Testbed for Robot Learning with Reinforcement Learning</u></b></papertitle>
+        <br><em>Caleb Chuck, Carl Qi, Michael J Munje, Shuozhe Li, Max Rudolph, Chang Shi, Siddhant Agarwal, Harshit Sikchi, Abhinav Peri, Sarthak Dayal, Evan Kuo, Kavan Mehta, Anthony Wang, Peter Stone, Amy Zhang, Scott Niekum</em><br>
+        <a href="https://arxiv.org/pdf/2405.03113" target="_blank"><paperlink>arxiv</paperlink></a> /
+        <a href="https://rlairhockey.github.io/" target="_blank"><paperlink>project page</paperlink></a>
+    </div>
+
+    <div class="w3-container" style="padding:0%; margin: 5%; margin-top: 2.5%"> 
+        <papertitle><b><u>Score Models for Offline Goal-Conditioned Reinforcement Learning</u></b></papertitle>
+        <br><em><b>Harshit Sikchi</b>, Rohan Chitnis, Ahmed Touati, Alborz Geramifard, <b>Amy Zhang</b>, Scott Niekum</em><br>
+        <a href="https://arxiv.org/pdf/2311.02013" target="_blank"><paperlink>arxiv</paperlink></a> /
+        <a href="https://hari-sikchi.github.io/smore/" target="_blank"><paperlink>project page</paperlink></a>
+    </div>
+
+    <div class="w3-container" style="padding:0%; margin: 5%; margin-top: 2.5%"> 
+        <papertitle><b><u>Dual RL: Unification and new methods for reinforcement and imitation learning</u></b></papertitle>
+        <br><em><b>Harshit Sikchi</b>, Qinqing Zheng, <b>Amy Zhang</b>, Scott Niekum</em><br>
+        <a href="https://arxiv.org/pdf/2302.08560" target="_blank"><paperlink>arxiv</paperlink></a> /
+        <a href="https://hari-sikchi.github.io/dual-rl/" target="_blank"><paperlink>project page</paperlink></a>
+    </div>
+
+    <div class="w3-container" style="padding:0%; margin: 5%; margin-top: 2.5%"> 
+        <papertitle><b><u>f-Policy Gradients: A General Framework for Goal Conditioned RL using f-Divergences</u></b></papertitle>
+        <br><em><b>Siddhant Agarwal</b>, Ishan Durugkar, Peter Stone, <b>Amy Zhang</b></em><br>
         <a href="https://arxiv.org/abs/2310.06794v1" target="_blank"><paperlink>arxiv</paperlink></a> /
         <a href="https://agarwalsiddhant10.github.io/projects/fpg.html" target="_blank"><paperlink>project page</paperlink></a>
     </div>
 
     <div class="w3-container" style="padding:0%; margin: 5%; margin-top: 2.5%"> 
-        <papertitle><b>Imitation from Arbitrary Experience: A Dual Unification of Reinforcement and Imitation Learning Methods</b></papertitle>
-        <br><em>Harshit Sikchi, Amy Zhang, Scott Neikum</em><br>
+        <papertitle><b><u>Imitation from Arbitrary Experience: A Dual Unification of Reinforcement and Imitation Learning Methods</u></b></papertitle>
+        <br><em><b>Harshit Sikchi</b>, <b>Amy Zhang</b>, Scott Neikum</em><br>
         <a href="https://arxiv.org/abs/2302.08560" target="_blank"><paperlink>arxiv</paperlink></a> /
         <a href="https://arxiv.org/abs/2302.08560" target="_blank"><paperlink>project page</paperlink></a>
     </div>
