--- a/publications.html
+++ b/publications.html
@@ -54,15 +54,15 @@
     <div class="w3-container" style="padding:0%; margin: 5%; margin-top: 2.5%"> 
         <papertitle><b><u>AMAGO-2: Breaking the Multi-Task Barrier in Meta-Reinforcement Learning with Transformers</u></b></papertitle>
         <br><em>Jake Grigsby, Justin Sasek, <b>Samyak Parajuli</b>, <b>Daniel Adebi</b>, <b>Amy Zhang</b>, Yuke Zhu</em><br>
-        <a href="https://arxiv.org/pdf/2406.17688" target="_blank"><paperlink>arxiv</paperlink></a> /
-        <a href="https://github.com/philippe-eecs/small-vision" target="_blank"><paperlink>project page</paperlink></a>
+        <a href="https://arxiv.org/abs/2411.11188" target="_blank"><paperlink>arxiv</paperlink></a> /
+        <a href="https://github.com/UT-Austin-RPL/amago" target="_blank"><paperlink>project page</paperlink></a>
     </div>
 
     <div class="w3-container" style="padding:0%; margin: 5%; margin-top: 2.5%"> 
         <papertitle><b><u>EC-Diffuser: Multi-Object Manipulation via Entity-Centric Behavior Generation</u></b></papertitle>
         <br><em><b>Carl Qi</b>, Dan Haramati, Tal Daniel, Aviv Tamar, <b>Amy Zhang</b></em><br>
-        <a href="https://arxiv.org/pdf/2406.17688" target="_blank"><paperlink>arxiv</paperlink></a> /
-        <a href="https://github.com/philippe-eecs/small-vision" target="_blank"><paperlink>project page</paperlink></a>
+        <a href="https://openreview.net/pdf/d5d60ed6df9d759f4fe365d67ea8b6dd2eeebdfc.pdf" target="_blank"><paperlink>arxiv</paperlink></a> /
+        <a href="https://sites.google.com/view/ec-diffuser" target="_blank"><paperlink>project page</paperlink></a>
     </div>
 
     <div class="w3-container" style="padding:0%; margin: 5%; margin-top: 2.5%"> 
