--- a/people.html
+++ b/people.html
@@ -91,6 +91,11 @@
     <a href="https://ryanxhr.github.io//" style="margin: 2.5%; max-width: 100%; font-weight:bold; ">Haoran Xu</a>
   </div>
 
+   <div class="w3-container" id="columnleft">
+    <!--Jiahui (Karen) --> <img src="peoplepageimages/karen.png" id="circle"  style="border-radius: 50%; border: 10px solid #ffffff; max-height:130px; max-width: 50%; float: left;" alt="Jiahui (Karen) Chen">
+    <a href="https://jiahuikchen.github.io/" style="margin: 2.5%; max-width: 100%; font-weight:bold; ">Jiahui (Karen) Chen</a>
+  </div>
+
 <!--paste new PHD people above this line using template-->
 </div>
 
